--- a/public/index.css
+++ b/public/index.css
@@ -9,6 +9,9 @@ body {
 
 .container {
     margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .nav-bar {
